[tool.poetry]
authors = ["Arjun Umathanu"]
description = "A CLI app for performing RESTX operations via HTTP requests."
license = "MIT"
name = "restx"
readme = "README.md"
version = "0.1.3"

[tool.poetry.dependencies]
httpx = "^0.27.0"
python = ">=3.10,<4.0"
rich = "^13.7.1"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-httpx = "^0.30.0"
pytest-mock = "^3.14.0"
pytest-sugar = "^1.0.0"
ruff = "^0.3.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
restx = "restx.cli:app"
