[tool.poetry]
authors = ["Arjun Umathanu"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "A CLI app for performing REST API CRUD operations via HTTP/HTTPS requests."
include = [
  "LICENSE",
]
license = "MIT"
name = "restx"
readme = "README.md"
version = "0.1.11"

[tool.poetry.dependencies]
httpx = "^0.27.0"
python = ">=3.10,<4.0"
rich = "^13.7.1"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-httpx = "^0.30.0"
pytest-mock = "^3.14.0"
pytest-sugar = "^1.0.0"
ruff = "^0.3.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
restx = "restx.cli:app"
